# Test-Repo

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/api_v1/endpoints/: items.py
